add css sheet, add header and hero banner

--- a/index.html
+++ b/index.html
@@ -4,9 +4,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');</style>
+    <link rel="stylesheet" href="style.css">
     <title>Landing Page</title>
 </head>
 <body>
-    
+  <div class="header">
+    <div class="left">
+      <div class="header-logo">Header Logo</div>
+    </div>
+    <div class="right">
+      <ul class="header-links">
+        <li><a href="google.com">link one</a></li>
+        <li><a href="google.com">link two</a></li>
+        <li><a href="google.com">link three</a></li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="body-1"></div>
+
+  <div class="body-2">Some random information...</div>
+    <div class="body-2-container">
+      <div class="info">
+        <img src="images/image1.webp" alt="1">
+        <div class="hero-text">this is some subtext under an illustration or image</div>
+      </div>
+      <div class="info">
+        <img src="images/image2.webp" alt="2">
+        <div class="hero-text">this is some subtext under an illustration or image</div>
+      </div>
+      <div class="info">
+        <img src="images/image3.webp" alt="3">
+        <div class="hero-text">this is some subtext under an illustration or image</div>
+      </div>
+      <div class="info">
+        <img src="images/image4.webp" alt="4">
+        <div class="hero-text">this is some subtext under an illustration or image</div>
+      </div>
+    </div>
+
+  <div class="body-3"></div>
+  <div class="body-4"></div>
 </body>
 </html>
+
+
